Lots of small fixes: - submit / submit confirm should act normally now - reduction in font-size for NHS smaller screens - fixed some style issues with buttons / vertical alignment / centering of elements - removed dead code

--- a/webapp/frontend/src/assets/main.css
+++ b/webapp/frontend/src/assets/main.css
@@ -1,7 +1,8 @@
 html, body {
-   height: 100%;
-   overflow: hidden;
- }
+  height: 100%;
+  overflow: hidden;
+  font-size: 14px;
+}
 
 body > div {
   height: 100%;
@@ -9,4 +10,5 @@ body > div {
 
 body {
   font-family: inherit;
+  font-size: 1rem;
 }
