--- a/webapp/frontend/src/styles/_common.scss
+++ b/webapp/frontend/src/styles/_common.scss
@@ -42,5 +42,5 @@ $blur-radius: 10px;
 }
 
 .detail-panel {
-  width: 500px;
+  width: 400px;
 }
