--- a/webapp/frontend/src/styles/_variables.scss
+++ b/webapp/frontend/src/styles/_variables.scss
@@ -22,7 +22,7 @@ $color-4: #45503B;
 $color-5: #747572;
 
 $background: inherit; //$color-2;
-$text: $color-4;
+$text: black;
 $text-highlight: black; //$color-5;
 $borders: $color-1;
 
